# order_service

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  deps.py  orders.py
app/application/auth/: service.py
app/application/common/: ports.py
app/application/orders/: service.py
app/core/: config.py  kafka.py  log_context.py  monitoring.py  security.py  structured_logging.py
app/db/: base.py  session.py
app/domain/auth/: exceptions.py  validators.py
app/domain/common/: exceptions.py
app/domain/orders/: entities.py  enums.py  exceptions.py
app/domain/users/: entities.py
app/infrastructure/cache/: order_cache.py
app/messaging/: consumer.py  outbox_publisher.py  producer.py
app/models/: base.py  order.py  outbox_event.py  processed_event.py  user.py
app/observability/: __init__.py  log_context.py  structured_logging.py
app/schemas/: auth.py  order.py
app/services/: auth_cache_service.py  cache_service.py  order_service.py
app/services/models/: order.py  user.py
app/tasks/: celery_app.py  order_tasks.py
app/tests/: conftest.py  test_auth.py  test_cache_service.py  test_dlq.py  test_messaging.py  test_orders.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
migrations/: env.py
migrations/versions/: 831ba9b83ab1_initial.py  b91d0a8f2c3e_processed_events_idempotency.py  c7b2df9d4c1a_outbox_events.py  f3e1c0d7a9b2_outbox_failed_and_metadata.py
(+2 files in other folders)
